--- a/anonymousblock.html
+++ b/anonymousblock.html
@@ -1,6 +1,9 @@
 <html>
 	<body>
-		<p>Example 1</p>
+		The following case will violate all-inline or all-block child rule.<br>
+		https://www.webkit.org/blog/115/webcore-rendering-ii-blocks-and-inlines/
+		
+		<p>Example 1: inlines inside block flows</p>
 			<div>
 				Some text
 				<div>
@@ -8,7 +11,7 @@
 				</div>
 			</div>
 		<br>
-		<p>Example 2</p>
+		<p>Example 2: blocks inside inline flows</p>
 		<i>Italic only <b>italic and bold
 		<div>
 			Wow, a block!
